--- a/README.rdoc
+++ b/README.rdoc
@@ -1,1 +1,3 @@
 == Pawłowicz
+{<img src="https://travis-ci.org/mhib/pawlowicz.svg?branch=master" alt="Build Status" />}[https://travis-ci.org/mhib/pawlowicz]
+{<img src="https://codeclimate.com/github/mhib/pawlowicz/badges/gpa.svg" />}[https://codeclimate.com/github/mhib/pawlowicz]
